Added Jib configuration.