@@ -1,8 +1,11 @@
+import java.time.OffsetDateTime
+
 plugins {
     jacoco
     alias(libs.plugins.kotlin)
     alias(libs.plugins.kotlinSpring)
     alias(libs.plugins.springBoot) apply true
+    alias(libs.plugins.jib)
 }
 
 dependencies {
@@ -23,4 +26,34 @@ dependencies {
     testImplementation(libs.mockk)
 
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+}
+
+jib {
+    from {
+        image = "bellsoft/liberica-openjdk-alpine:21"
+    }
+    to {
+        image = "localhost:32000/ignite-client"
+    }
+    setAllowInsecureRegistries(true)
+    container {
+        jvmFlags = listOf(
+            "-Xms512m",
+            "-Xmx512m",
+            "-DIGNITE_QUIET=false",
+            "-Djava.net.preferIPv4Stack=true",
+            "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
+            "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED",
+            "--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
+            "--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED",
+            "--add-opens=java.base/java.io=ALL-UNNAMED",
+            "--add-opens=java.base/java.nio=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED"
+        )
+        ports = listOf("10800", "8080")
+        creationTime.set(OffsetDateTime.now().toString())
+    }
 }
